--- a/modules/custom/drustack_core/drustack_core.features.yml
+++ b/modules/custom/drustack_core/drustack_core.features.yml
@@ -1,174 +1,4 @@
 bundle: drustack
 excluded:
   - core.menu.static_menu_link_overrides
-required:
-  - features.bundle.drustack
-  - features.settings
-  - aggregator.settings
-  - automated_cron.settings
-  - diff.settings
-  - diff.plugins
-  - file.settings
-  - hal.settings
-  - file_mdm.file_metadata_plugin.getimagesize
-  - imagemagick.file_metadata_plugin.imagemagick_identify
-  - imagemagick.settings
-  - mailsystem.settings
-  - locale.settings
-  - media.settings
-  - media_library.settings
-  - menu_ui.settings
-  - mimemail.settings
-  - module_filter.settings
-  - scheduler.settings
-  - statistics.settings
-  - swiftmailer.message
-  - swiftmailer.transport
-  - syslog.settings
-  - system.image
-  - system.image.gd
-  - system.mail
-  - system.rss
-  - system.theme.global
-  - taxonomy.settings
-  - text.settings
-  - tracker.settings
-  - user.flood
-  - user.mail
-  - views.settings
-  - dblog.settings
-  - admin_toolbar_tools.settings
-  - coffee.configuration
-  - comment.settings
-  - contact.settings
-  - embed.settings
-  - file_mdm.settings
-  - jsonapi.settings
-  - language.mappings
-  - language.negotiation
-  - language.types
-  - libraries.settings
-  - pathauto.settings
-  - search.settings
-  - seven.settings
-  - system.cron
-  - system.theme
-  - file_mdm_exif.file_metadata_plugin.exif
-  - file_mdm_font.file_metadata_plugin.font
-  - image_effects.settings
-  - sophron.settings
-  - bartik.settings
-  - bootstrap_barrio.settings
-  - field.storage.block_content.body
-  - field.storage.comment.comment_body
-  - field.storage.node.body
-  - field.storage.node.field_attachment
-  - core.date_format.html_month
-  - core.date_format.html_time
-  - core.date_format.html_week
-  - core.date_format.fallback
-  - core.date_format.html_date
-  - core.date_format.html_datetime
-  - core.date_format.html_year
-  - core.date_format.html_yearless_date
-  - core.date_format.long
-  - core.date_format.medium
-  - core.date_format.short
-  - core.entity_form_mode.media.media_library
-  - core.entity_form_mode.user.register
-  - core.entity_view_display.aggregator_feed.aggregator_feed.default
-  - core.entity_view_display.aggregator_feed.aggregator_feed.summary
-  - core.entity_view_display.aggregator_item.aggregator_item.summary
-  - core.entity_view_mode.media.full
-  - core.entity_view_mode.media.media_library
-  - core.entity_view_mode.node.full
-  - core.entity_view_mode.node.rss
-  - core.entity_view_mode.node.search_index
-  - core.entity_view_mode.node.search_result
-  - core.entity_view_mode.node.teaser
-  - core.entity_view_mode.taxonomy_term.full
-  - core.entity_view_mode.user.compact
-  - core.entity_view_mode.user.full
-  - core.entity_view_mode.aggregator_feed.summary
-  - core.entity_view_mode.aggregator_item.summary
-  - core.entity_view_mode.block_content.full
-  - core.entity_view_mode.comment.full
-  - core.entity_view_mode.node.diff
-  - views.view.archive
-  - views.view.frontpage
-  - views.view.media_library
-  - views.view.taxonomy_term
-  - views.view.media
-  - views.view.aggregator_rss_feed
-  - views.view.aggregator_sources
-  - views.view.block_content
-  - views.view.comment
-  - views.view.comments_recent
-  - views.view.content
-  - views.view.content_recent
-  - views.view.files
-  - views.view.glossary
-  - views.view.scheduler_scheduled_content
-  - views.view.user_admin_people
-  - views.view.watchdog
-  - views.view.who_s_new
-  - views.view.who_s_online
-  - views.view.moderated_content
-  - image.style.large
-  - image.style.media_library
-  - image.style.medium
-  - image.style.thumbnail
-  - image.style.wide
-  - rest.resource.entity.node
-  - tour.tour.block-layout
-  - tour.tour.language
-  - tour.tour.language-add
-  - tour.tour.language-edit
-  - tour.tour.locale
-  - tour.tour.views-ui
-  - core.base_field_override.user.user.changed
-  - core.base_field_override.user.user.path
-  - core.base_field_override.user.user.metatag
-  - language.entity.en
-  - workflows.workflow.editorial
-  - language.content_settings.path_alias.path_alias
-  - language.content_settings.aggregator_feed.aggregator_feed
-  - language.content_settings.aggregator_item.aggregator_item
-  - language.content_settings.contact_message.personal
-  - language.content_settings.file.file
-  - language.content_settings.menu_link_content.menu_link_content
-  - language.content_settings.user.user
-  - language.content_settings.content_moderation_state.content_moderation_state
-  - language.content_settings.shortcut.default
-  - core.entity_form_display.user.user.register
-  - core.entity_form_display.aggregator_feed.aggregator_feed.default
-  - core.entity_form_display.contact_message.personal.default
-  - pathauto.pattern.media
-  - pathauto.pattern.node
-  - pathauto.pattern.user
-  - rdf.mapping.user.user
-  - shortcut.set.default
-  - system.menu.account
-  - system.menu.admin
-  - system.menu.footer
-  - system.menu.main
-  - system.menu.tools
-  - block.block.bartik_branding
-  - block.block.bartik_breadcrumbs
-  - block.block.bartik_content
-  - block.block.bartik_help
-  - block.block.bartik_local_actions
-  - block.block.bartik_local_tasks
-  - block.block.bartik_messages
-  - block.block.bartik_page_title
-  - block.block.bartik_powered
-  - block.block.bartik_search
-  - block.block.seven_breadcrumbs
-  - block.block.seven_content
-  - block.block.seven_help
-  - block.block.seven_local_actions
-  - block.block.seven_messages
-  - block.block.seven_page_title
-  - block.block.seven_primary_local_tasks
-  - block.block.seven_secondary_local_tasks
-  - contact.form.personal
+required: true
