--- a/modules/custom/drustack_webform/drustack_webform.info.yml
+++ b/modules/custom/drustack_webform/drustack_webform.info.yml
@@ -1,28 +1,27 @@
 type: module
 package: DruStack
-name: 'DruStack Article'
-description: 'Provides Article content type and related configuration. Use <em>articles</em> for time-sensitive content like news, press releases or blog posts.'
+name: 'DruStack Webform'
+description: 'Provides Webform content type and related configuration. A basic page with a webform attached.'
 core_version_requirement: '^8.9 || ^9'
 dependencies:
-  - 'captcha:captcha'
-  - 'drupal:comment'
   - 'drupal:content_translation'
   - 'drupal:field'
-  - 'drupal:file'
-  - 'drupal:image'
   - 'drupal:language'
-  - 'drupal:layout_discovery'
   - 'drupal:media_library'
   - 'drupal:menu_ui'
   - 'drupal:node'
   - 'drupal:path'
   - 'drupal:rdf'
-  - 'drupal:responsive_image'
-  - 'drupal:taxonomy'
   - 'drupal:text'
   - 'drupal:user'
   - 'drupal:views'
   - 'drustack_core:drustack_core'
   - 'pathauto:pathauto'
   - 'scheduler:scheduler'
+  - 'webform:webform'
+  - 'webform:webform_bootstrap'
+  - 'webform:webform_devel'
+  - 'webform:webform_node'
+  - 'webform:webform_templates'
+  - 'webform:webform_ui'
   - 'xmlsitemap:xmlsitemap'
