--- a/themes/custom/drustack_bootstrap/package.json
+++ b/themes/custom/drustack_bootstrap/package.json
@@ -1,8 +1,9 @@
 {
-  "dependencies": {
-    "stylelint": "^13.12.0",
-    "stylelint-config-standard": "^21.0.0",
-    "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.19.0"
-  }
+    "dependencies": {
+        "node-sass": "~5.0",
+        "stylelint": "~13.12",
+        "stylelint-config-standard": "~21.0",
+        "stylelint-csstree-validator": "~1.9",
+        "stylelint-scss": "~3.19"
+    }
 }
