--- a/themes/custom/drustack_bootstrap/drustack_bootstrap.libraries.yml
+++ b/themes/custom/drustack_bootstrap/drustack_bootstrap.libraries.yml
@@ -12,7 +12,7 @@ global-styling:
 popper:
   version: VERSION
   js:
-    ../../../../../libraries/popper.js/dist/popper.min.js: {}
+    ../../../../../libraries/popperjs--core/dist/umd/popper.min.js: {}
   dependencies:
     - core/jquery
     - core/drupal
