--- a/config/install/drustack_bootstrap.settings.yml
+++ b/config/install/drustack_bootstrap.settings.yml
@@ -64,11 +64,11 @@ bootstrap_barrio_navbar_container: 0
 bootstrap_barrio_navbar_toggle: navbar-toggleable-xl
 bootstrap_barrio_navbar_top_navbar: 0
 bootstrap_barrio_navbar_top_position: ''
-bootstrap_barrio_navbar_top_color: ''
-bootstrap_barrio_navbar_top_background: ''
+bootstrap_barrio_navbar_top_color: navbar-light
+bootstrap_barrio_navbar_top_background: bg-secondary
 bootstrap_barrio_navbar_position: ''
-bootstrap_barrio_navbar_color: ''
-bootstrap_barrio_navbar_background: ''
+bootstrap_barrio_navbar_color: navbar-dark
+bootstrap_barrio_navbar_background: bg-primary
 bootstrap_barrio_navbar_top_class: ''
 bootstrap_barrio_navbar_class: ''
 bootstrap_barrio_navbar_flyout: 0
@@ -85,9 +85,9 @@ bootstrap_barrio_sidebar_first_affix: 0
 bootstrap_barrio_sidebar_second_affix: 0
 bootstrap_barrio_scroll_spy: ''
 bootstrap_barrio_google_fonts: ''
-bootstrap_barrio_bootstrap_icons: 0
-bootstrap_barrio_icons: ''
+bootstrap_barrio_bootstrap_icons: 1
+bootstrap_barrio_icons: fontawesome
 bootstrap_barrio_system_messages: ''
-bootstrap_barrio_table_style: ''
-bootstrap_barrio_table_hover: 0
+bootstrap_barrio_table_style: table-striped
+bootstrap_barrio_table_hover: 1
 bootstrap_barrio_table_head: ''
